fixed responsiveness on iPhone 5

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,3 @@
-@media (max-width: 320px) {
-  .showcase-TravelNow {
-    padding-top: 80px !important;
-  }
-}
-
 @media (max-width: 768px) {
   body {
     overflow-x: hidden;
@@ -88,6 +82,16 @@
 
   .footerSection > ul {
     padding: 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .showcase-TravelNow {
+    padding-top: 70px !important;
+  }
+
+  .title{
+    font-size: 40px;
   }
 }
 
